# ankor_device_info

./: .gitignore  ankor-repo-public.key  main.py  pyproject.toml  requirements.txt
apt-repo/dists/stable/: Release
apt-repo/dists/stable/main/binary-all/: Packages.xz
dists/stable/: InRelease  Release.gpg
dists/stable/main/binary-all/: Packages
packaging/deb/: control.template  launcher.sh
scripts/: build_deb.sh  publish_apt_repo.sh
snap/: snapcraft.yaml
snap/gui/: ankor-device-info.desktop
src/ankor_device_info/: __init__.py  __main__.py  app.py
