[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ankor-device-info"
version = "1.0.0"
description = "Desktop hardware monitor with an optional pinned overlay."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["psutil>=5.9"]

[project.optional-dependencies]
pyside6 = ["PySide6>=6.6"]
pyqt6 = ["PyQt6>=6.6"]
nvidia = ["nvidia-ml-py>=12.0"]

[project.scripts]
ankor-device-info = "ankor_device_info.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
